# naturo

./: .gitignore  .mailmap  CHANGELOG.md  NEEDS-ACE.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build.yml  codeql.yml  desktop-tests.yml  publish.yml  qa-agent.yml
.work/reviews/: 2026-03-29-daily-review.md  2026-04-01-0930-daily-review.md  2026-04-03-1400-daily-review.md  2026-04-04-1600-daily-review.md  2026-04-05-0745-daily-review.md  2026-04-05-0900-daily-review.md  2026-04-11-daily-review.md  2026-04-12-0400-daily-review.md  2026-04-12-2300-daily-review.md  2026-04-15-1200-daily-review.md  2026-05-08-1503-daily-review.md  2026-05-09-1203-daily-review.md  2026-05-10-1200-daily-review.md  2026-05-11-0001-daily-review.md  2026-05-12-1205-daily-review.md  2026-05-25-0001-daily-review.md  2026-05-26-1502-daily-review.md  2026-05-27-0002-daily-review.md  2026-05-28-0000-daily-review.md  2026-05-28-1206-daily-review.md  2026-05-29-0607-daily-review.md  2026-05-30-0401-daily-review.md  2026-05-31-0401-daily-review.md  2026-06-03-daily-review.md  2026-06-05-1605-daily-review.md  2026-06-06-1611-daily-review.md  2026-06-07-1202-daily-review.md  2026-06-08-0715-daily-review.md  2026-06-16-1625-auto-review.md  2026-06-16-1724-auto-review.md  2026-06-16-1922-auto-review.md  2026-06-16-2124-auto-review.md  2026-06-16-2224-auto-review.md  2026-06-16-2322-auto-review.md  2026-06-17-0224-auto-review.md  2026-06-17-0424-auto-review.md  2026-06-17-1524-auto-review.md  2026-06-17-1940-auto-review.md  2026-06-17-2025-auto-review.md  2026-06-17-2125-auto-review.md  (+39 more)
agents/: STATE.md
agents/config/: cost-guardrails.yaml
agents/dev/: status.md
agents/github-queue/: pending-issues.md  pr-requests.md  session-log.md
agents/local/: dev-cycle.md  install-tasks.ps1  keep-session.ps1  orch-review.md  qa-cycle.md  runner.ps1
agents/orchestrator/: dev-prompt.md  qa-prompt.md  review-prompt.md  session-handoff.md
agents/qa/: .last-ci-sha  status.md
agents/qa/testcases/: CATALOG.md
benchmarks/: __init__.py
benchmarks/recognition/: __init__.py  harness.py  run_benchmark.py
benchmarks/recognition/fixtures/: webapp.html
core/: CMakeLists.txt
core/src/: version.cpp
docs/: CLI_REFERENCE.md  COMPETITIVE.md  ERROR_CODES.md  MIGRATION_FROM_RPA_SCRIPTS.md  RECOGNITION.md  ROADMAP.md  TEST_PLAN.md
docs/case-studies/: electron-app-cascade.md
docs/design/: NPM_DISTRIBUTION.md  UNIFIED_APP_MODEL.md
naturo/: __init__.py  _worktree_guard.py  bridge.py  cascade.py  cdp.py  deps.py  errors.py  excel.py  mcp_server.py  process.py  refs.py  routing.py  safety.py  selector.py  snapshot.py  verify.py  visual.py
naturo/backends/: base.py  windows.py
naturo/backends/macos/: __init__.py  _app.py  _capture.py  _element.py  _input.py  _peekaboo.py  _system.py  _window.py
naturo/backends/windows/: _capture.py  _core.py  _element.py  _input.py  _trajectory.py
naturo/bridge/: _core.py
naturo/browser/: __init__.py  _element.py  _network.py  _page.py  _selectors.py  _stealth.py
naturo/cascade/: __init__.py  _merge.py
naturo/cli/: __init__.py  app_cmd.py  browser_cmd.py  config_cmd.py  core.py  desktop_cmd.py  dialog_cmd.py  diff_cmd.py  doctor_cmd.py  error_helpers.py  extensions.py  get_cmd.py  interaction.py  options.py  recording_cmd.py  selector_cmd.py  set_cmd.py  snapshot.py  table.py  visual_cmd.py  wait_cmd.py  window_cmd.py
naturo/cli/_app/: lifecycle.py
naturo/cli/_browser/: __init__.py  waits.py  (+9 more)
naturo/detect/: chain.py  probes.py
naturo/mcp/: __init__.py  _app.py  _capture.py  _clipboard.py  _dialog.py  _excel.py  _input.py  _inspect.py  _resolve.py  _snapshot.py  _system.py  _wait.py  _window.py
naturo/providers/: anthropic_provider.py  base.py  model_registry.py  ollama_provider.py  openai_provider.py
packaging/mcpb/: README.md  manifest.json
scripts/: build_mcpb.py  bump_version.py
tests/: QA_AGENT.md  conftest.py  test_annotate_helpers.py  test_anthropic_oauth.py  test_anthropic_provider.py  test_app_alias_localized.py  test_app_control.py  test_app_filter_basename_789.py  test_app_filter_process_priority.py  test_app_ids.py  test_app_inspect_pid_validation_901.py  test_browser.py  test_browser_cmd.py  test_browser_cmd_split.py  test_browser_element.py  test_browser_network.py  test_browser_page.py  test_browser_select_profile.py  test_bug_round_full.py  test_capture_crop.py  test_capture_region_offscreen_1050.py  test_capture_unicode_path.py  test_cascade.py  test_cascade_ai_merge.py  test_cascade_coverage_helpers.py  test_cli.py  test_cli_consistency.py  test_cli_interaction_common.py  test_cli_options.py  test_cli_phase2.py  test_cli_see.py  test_cli_table.py  test_click_app_foreground.py  test_click_app_validation.py  test_click_on_chinese.py  test_click_ref_skip_routing.py  test_click_uwp_identity.py  test_clipboard_set_input_888.py  test_config.py  test_config_cmd.py  (+93 more)
tests/integration/: conftest.py  test_unified_app_model.py
tests/qa-reports/: QA-Mariana-20260331-2027.md  QA-Mariana-20260331-2127.md  QA-Mariana-20260331-2325.md  QA-Mariana-20260401-0502.md  QA-Mariana-20260401-0745.md  QA-Mariana-20260401-1922.md  QA-Mariana-20260402-0022.md  QA-Mariana-20260402-0116.md  QA-Mariana-20260402-0400.md  QA-Mariana-20260402-0616.md  QA-Mariana-20260402-0823.md  QA-Mariana-20260402-1320.md  QA-Mariana-20260402-1915.md  QA-Mariana-20260402-2220.md  QA-Mariana-20260402-2342.md  QA-Mariana-20260404-1119.md  QA-Mariana-20260404-1616.md  QA-Mariana-20260404-1712.md  QA-Mariana-20260404-1830.md  QA-Mariana-20260404-1916.md  QA-Mariana-20260404-2112.md  QA-Mariana-20260404-2312.md  QA-Mariana-20260405-0016.md  QA-Mariana-20260527-2309.md  QA-Mariana-20260528-0212.md  QA-Mariana-20260528-0611.md  QA-Mariana-20260528-0712.md  QA-Mariana-20260528-0811.md  QA-Mariana-20260528-0900.md  QA-Mariana-20260528-1207.md  QA-Mariana-20260528-1300.md  QA-Mariana-20260528-1613.md  QA-Mariana-20260528-1713.md  QA-Mariana-20260528-1911.md  QA-Mariana-20260528-2108.md  QA-Mariana-20260528-2300.md  QA-Mariana-20260529-0313.md  QA-Mariana-20260529-0507.md
(+100 files in other folders)
